# ParkSight

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  download_models.py  parksight.db  pyproject.toml  requirements.txt  setup_venv.sh
brain/: graph.py
cloud/api/: analytics_service.py  auth_routes.py  billing_service.py  calibration_routes.py  main.py  monitoring.py  notifications.py  policy_engine.py  predictor_service.py  reports.py  requirements.txt  revenue_service.py  security.py  telemetry.py
docker/: Dockerfile.api  Dockerfile.edge  Dockerfile.ui  nginx-ui.conf
edge/: camera_service.py  cv_inference.py  guidance_engine.py  identity_engine.py  main.py  onnx_identity.py  plate_pipeline.py  scene_builder.py  slot_engine.py  test_slot_engine.py  verify_kaggle.py
edge/configs/: kaggle_config.json
evaluation/: README.md  __init__.py  evaluate_models.py  generate_ground_truth.py  metrics.py
infra/helm/: Chart.yaml  values.yaml
langgraph/: graph.py
parksight_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analytics.py  test_api.py  test_billing.py  test_brain.py  test_edge_scene_builder.py  test_edge_slot_engine.py  test_end_to_end_pilot.py  test_evaluation_metrics_unit.py  test_identity_torch.py  test_metrics_scrape.py  test_model_evaluation.py  test_offline_resilience.py  test_plate_pipeline.py  test_reid.py  test_revenue_service.py  test_security_calibration.py  test_stack_contract.py
tests/fixtures/: README.md  sample_gt.json
ui/: index.html  package-lock.json  package.json
(+5 files in other folders)
