[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parksight-ai"
version = "1.1.0"
description = "Enterprise-grade intelligent parking guidance system."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary",
    "shapely",
    "ultralytics",
    "opencv-python-headless",
    "onnxruntime",
    "numpy",
    "langgraph",
    "langchain-groq",
    "python-dotenv",
    "httpx",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud*", "edge*", "brain*"]
